--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "1.0.0",
   "description": "### Откройте pull request в ветку main из ветки, где вы разрабатывали проект, и добавьте ссылку на этот pr в README.md в ветке main. Название pull request может быть любое.",
   "default": "index.html",
+  "engines": {
+    "node": ">=12.0.0"
+  },
   "scripts": {
-    "start": "nodemon server.js",
+    "app": "nodemon -r esm app.js",
+    "start": "./node_modules/.bin/parcel index.html -p 3000",
     "dev": "./node_modules/.bin/parcel index.html",
     "build": "rm -rf dist && ./node_modules/.bin/parcel build index.html"
   },
@@ -23,6 +27,7 @@
     "parcel": "^2.0.0-rc.0"
   },
   "dependencies": {
+    "esm": "^3.2.25",
     "express": "^4.17.1"
   }
 }
