--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "node": ">=12.0.0"
   },
   "scripts": {
-    "app": "nodemon -r esm app.js",
-    "start": "./node_modules/.bin/parcel index.html -p 3000",
-    "dev": "./node_modules/.bin/parcel index.html",
-    "build": "rm -rf dist && ./node_modules/.bin/parcel build index.html"
+    "server": "nodemon -r esm server.js",
+    "start": "./node_modules/.bin/parcel ./static/index.html -p 3000",
+    "dev": "./node_modules/.bin/parcel ./static/index.html",
+    "build": "rm -rf dist && ./node_modules/.bin/parcel build ./static/index.html"
   },
   "repository": {
     "type": "git",
