--- a/package.json
+++ b/package.json
@@ -1,26 +1,15 @@
 {
   "name": "middle.messenger.praktikum.yandex",
-  "version": "1.0.0",
-  "description": "### Откройте pull request в ветку main из ветки, где вы разрабатывали проект, и добавьте ссылку на этот pr в README.md в ветке main. Название pull request может быть любое.",
   "engines": {
     "node": ">=12.0.0"
   },
+  "source": "static/index.html",
   "scripts": {
     "server": "nodemon -r esm server.js",
-    "start": "./node_modules/.bin/parcel ./static/index.html -p 3000",
-    "dev": "./node_modules/.bin/parcel ./static/index.html",
-    "build": "./node_modules/.bin/parcel build ./static/index.html"
+    "start": "parcel -p 3000",
+    "dev": "parcel",
+    "build": "parcel build"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/MaximStovba/middle.messenger.praktikum.yandex.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/MaximStovba/middle.messenger.praktikum.yandex/issues"
-  },
-  "homepage": "https://github.com/MaximStovba/middle.messenger.praktikum.yandex#readme",
   "devDependencies": {
     "@parcel/transformer-sass": "^2.0.0-rc.0",
     "autoprefixer": "^10.3.7",
