--- a/package.json
+++ b/package.json
@@ -12,10 +12,15 @@
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.0.0-rc.0",
+    "@typescript-eslint/eslint-plugin": "^5.1.0",
+    "@typescript-eslint/parser": "^5.1.0",
     "autoprefixer": "^10.3.7",
+    "eslint": "^8.0.1",
     "nodemon": "^2.0.13",
     "parcel": "^2.0.0-rc.0",
-    "postcss": "^8.3.9"
+    "postcss": "^8.3.9",
+    "stylelint": "^13.13.1",
+    "stylelint-config-standard": "^22.0.0"
   },
   "dependencies": {
     "esm": "^3.2.25",
