--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,5 +16,7 @@
         "@typescript-eslint"
     ],
     "rules": {
+      "@typescript-eslint/no-unused-vars": true,
+      "@typescript-eslint/no-empty-function": true
     }
 }
