--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "middle.messenger.praktikum.yandex",
   "engines": {
-    "node": ">=12.0.0"
+    "node": ">=12.0.0",
+    "browsers": "> 0.25%"
   },
   "source": "static/index.html",
+
   "scripts": {
     "server": "nodemon -r esm server.js",
     "start": "parcel -p 3000",
@@ -12,6 +14,7 @@
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.0.0-rc.0",
+    "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^5.1.0",
     "@typescript-eslint/parser": "^5.1.0",
     "autoprefixer": "^10.3.7",
@@ -24,6 +27,7 @@
   },
   "dependencies": {
     "esm": "^3.2.25",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "uuid": "^3.4.0"
   }
 }
