--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,7 +16,7 @@
         "@typescript-eslint"
     ],
     "rules": {
-      "@typescript-eslint/no-unused-vars": true,
-      "@typescript-eslint/no-empty-function": true
+      "@typescript-eslint/no-unused-vars": 0,
+      "@typescript-eslint/no-empty-function": 0
     }
 }
