--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,6 @@
     "noUnusedParameters": true,
     "sourceMap": true,
     "strictNullChecks": true,
-    "moduleResolution": "Node",
+    "moduleResolution": "Node"
   },
 }
