--- a/package.json
+++ b/package.json
@@ -5,25 +5,34 @@
     "browsers": "> 0.25%"
   },
   "source": "static/index.html",
-
   "scripts": {
     "server": "nodemon -r esm server.js",
     "start": "parcel -p 3000 --no-cache",
     "dev": "parcel",
-    "build": "parcel build"
+    "build": "parcel build",
+    "test": "env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' mocha -r jsdom-global/register --require ts-node/register --require ignore-styles 'src/**/*.spec.ts'"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.0.0-rc.0",
+    "@types/chai": "^4.3.0",
+    "@types/jsdom": "^16.2.14",
+    "@types/mocha": "^9.0.0",
     "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^5.1.0",
     "@typescript-eslint/parser": "^5.1.0",
     "autoprefixer": "^10.3.7",
+    "chai": "^4.3.4",
     "eslint": "^8.0.1",
+    "ignore-styles": "^5.0.1",
+    "jsdom": "14.1.0",
+    "jsdom-global": "3.0.2",
+    "mocha": "^9.1.3",
     "nodemon": "^2.0.13",
     "parcel": "^2.0.0-rc.0",
     "postcss": "^8.3.9",
     "stylelint": "^13.13.1",
-    "stylelint-config-standard": "^22.0.0"
+    "stylelint-config-standard": "^22.0.0",
+    "ts-node": "^10.4.0"
   },
   "dependencies": {
     "esm": "^3.2.25",
