--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/chai": "^4.3.0",
     "@types/jsdom": "^16.2.14",
     "@types/mocha": "^9.0.0",
+    "@types/sinon": "^10.0.6",
     "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^5.1.0",
     "@typescript-eslint/parser": "^5.1.0",
@@ -30,6 +31,7 @@
     "nodemon": "^2.0.13",
     "parcel": "^2.0.0-rc.0",
     "postcss": "^8.3.9",
+    "sinon": "^12.0.1",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^22.0.0",
     "ts-node": "^10.4.0"
