--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   },
   "source": "static/index.html",
   "scripts": {
+    "build": "webpack --mode production",
+    "dev": "webpack serve",
     "server": "nodemon -r esm server.js",
-    "start": "parcel -p 3000 --no-cache",
-    "dev": "parcel",
-    "build": "parcel build",
+    "start": "node server.js",
     "test": "env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' mocha -r jsdom-global/register --require ts-node/register --require ignore-styles 'src/**/*.spec.ts'",
     "stylelint": "stylelint '**/*{.css,.scss}'",
     "eslint": "eslint ./ --ext .ts"
@@ -25,18 +25,31 @@
     "@typescript-eslint/parser": "^5.1.0",
     "autoprefixer": "^10.3.7",
     "chai": "^4.3.4",
+    "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^10.2.1",
+    "css-loader": "^6.5.1",
     "eslint": "^8.0.1",
+    "html-loader": "^3.1.0",
+    "html-webpack-plugin": "^5.5.0",
     "ignore-styles": "^5.0.1",
     "jsdom": "14.1.0",
     "jsdom-global": "3.0.2",
+    "mini-css-extract-plugin": "^2.5.2",
     "mocha": "^9.1.3",
     "nodemon": "^2.0.13",
     "parcel": "^2.0.0-rc.0",
     "postcss": "^8.3.9",
+    "sass": "^1.49.0",
+    "sass-loader": "^12.4.0",
     "sinon": "^12.0.1",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^22.0.0",
-    "ts-node": "^10.4.0"
+    "ts-loader": "^9.2.6",
+    "ts-node": "^10.4.0",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.66.0",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.7.3"
   },
   "dependencies": {
     "esm": "^3.2.25",
