--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "start": "node server.js",
     "test": "env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' mocha -r jsdom-global/register --require ts-node/register --require ignore-styles 'src/**/*.spec.ts'",
     "stylelint": "stylelint '**/*{.css,.scss}'",
-    "eslint": "eslint ./ --ext .ts"
+    "eslint": "eslint ./ --ext .ts",
+    "prepare": "husky install"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.0.0-rc.0",
@@ -31,6 +32,7 @@
     "eslint": "^8.0.1",
     "html-loader": "^3.1.0",
     "html-webpack-plugin": "^5.5.0",
+    "husky": "^7.0.0",
     "ignore-styles": "^5.0.1",
     "jsdom": "14.1.0",
     "jsdom-global": "3.0.2",
@@ -42,8 +44,8 @@
     "sass": "^1.49.0",
     "sass-loader": "^12.4.0",
     "sinon": "^12.0.1",
-    "stylelint": "^13.13.1",
-    "stylelint-config-standard": "^22.0.0",
+    "stylelint": "^14.2.0",
+    "stylelint-config-standard": "^24.0.0",
     "ts-loader": "^9.2.6",
     "ts-node": "^10.4.0",
     "url-loader": "^4.1.1",
