--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "sinon": "^12.0.1",
     "stylelint": "^14.2.0",
     "stylelint-config-standard": "^24.0.0",
+    "svg-inline-loader": "^0.8.2",
     "ts-loader": "^9.2.6",
     "ts-node": "^10.4.0",
     "url-loader": "^4.1.1",
